crates/python_parser/src/snapshots/python_parser__string__tests__parse_fstring_equals.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..13,
            value: FString(
                FStringExpr {
                    range: 0..13,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..13,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..12,
                                                expression: Compare(
                                                    CompareExpr {
                                                        range: 3..11,
                                                        left: NumberLiteral(
                                                            NumberLiteralExpr {
                                                                range: 3..5,
                                                                value: Int(
                                                                    42,
                                                                ),
                                                            },
                                                        ),
                                                        ops: [
                                                            Eq,
                                                        ],
                                                        comparators: [
                                                            NumberLiteral(
                                                                NumberLiteralExpr {
                                                                    range: 9..11,
                                                                    value: Int(
                                                                        42,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
