crates/python_parser/src/snapshots/python_parser__string__tests__parse_fstring_nested_concatenation_string_spec.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..16,
            value: FString(
                FStringExpr {
                    range: 0..16,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..16,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..15,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 3..6,
                                                        id: Name("foo"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 7..14,
                                                        elements: [
                                                            Expression(
                                                                FStringExpressionElement {
                                                                    range: 7..14,
                                                                    expression: StringLiteral(
                                                                        StringLiteralExpr {
                                                                            range: 8..13,
                                                                            value: StringLiteralValue {
                                                                                inner: Concatenated(
                                                                                    ConcatenatedStringLiteral {
                                                                                        strings: [
                                                                                            StringLiteral {
                                                                                                range: 8..10,
                                                                                                value: "",
                                                                                                flags: StringLiteralFlags {
                                                                                                    prefix: Empty,
                                                                                                    triple_quoted: false,
                                                                                                },
                                                                                            },
                                                                                            StringLiteral {
                                                                                                range: 11..13,
                                                                                                value: "",
                                                                                                flags: StringLiteralFlags {
                                                                                                    prefix: Empty,
                                                                                                    triple_quoted: false,
                                                                                                },
                                                                                            },
                                                                                        ],
                                                                                        value: "",
                                                                                    },
                                                                                ),
                                                                            },
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
