crates/python_parser/src/snapshots/python_parser__string__tests__parse_fstring_nested_string_spec.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..13,
            value: FString(
                FStringExpr {
                    range: 0..13,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..13,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..12,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 3..6,
                                                        id: "foo",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 7..11,
                                                        elements: [
                                                            Expression(
                                                                FStringExpressionElement {
                                                                    range: 7..11,
                                                                    expression: StringLiteral(
                                                                        StringLiteralExpr {
                                                                            range: 8..10,
                                                                            value: StringLiteralValue {
                                                                                inner: Single(
                                                                                    StringLiteral {
                                                                                        range: 8..10,
                                                                                        value: "",
                                                                                        unicode: false,
                                                                                    },
                                                                                ),
                                                                            },
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
