crates/python_parser/src/snapshots/python_parser__string__tests__parse_fstring_not_equals.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..11,
            value: FString(
                FStringExpr {
                    range: 0..11,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..11,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..10,
                                                expression: Compare(
                                                    CompareExpr {
                                                        range: 3..9,
                                                        left: NumberLiteral(
                                                            NumberLiteralExpr {
                                                                range: 3..4,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                        ops: [
                                                            NotEq,
                                                        ],
                                                        comparators: [
                                                            NumberLiteral(
                                                                NumberLiteralExpr {
                                                                    range: 8..9,
                                                                    value: Int(
                                                                        2,
                                                                    ),
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
